package ch006.Magic;

/**
 * @Author mapKey
 * @Date 2022-10-17-3:49 PM
 */
public class Bread {
    public boolean isEaten = false;

    public void beEaten() {
        isEaten = true;
    }
}
