package ch006.exception;

/**
 * @Author mapKey
 * @Date 2022-11-07-19:54
 */
public class NotEnoughException extends Exception{
    public NotEnoughException(String message) {
        super(message);
    }
}
